<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Fragment.HomeFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/top_playlist_textview"
            android:text="@string/top_playlist"
            android:textColor="@color/white"
            android:textSize="@dimen/text_heading"
            android:fontFamily="@font/alata_regular"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="@dimen/card_dimen"
            android:id="@+id/day_one_list"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintTop_toBottomOf="@id/top_playlist_textview"
            app:layout_constraintStart_toStartOf="@id/top_playlist_textview"
            app:layout_constraintEnd_toStartOf="@id/day_two_list">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/spacing_middle"
                app:cardElevation="@dimen/zero_dimen">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/day1"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/curved_card_blue"
                    android:alpha="0.6"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:includeFontPadding="false"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="@dimen/text_50"
                android:fontFamily="@font/alata_regular"
                android:layout_marginStart="@dimen/fab_margin"/>

            <TextView
                android:id="@+id/day_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:fontFamily="@font/alata_regular"
                android:text="@string/day"
                android:layout_marginBottom="50dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_heading"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="@dimen/card_dimen"
            android:id="@+id/day_two_list"
            android:layout_marginTop="@dimen/spacing_large"
            app:layout_constraintTop_toBottomOf="@id/top_playlist_textview"
            app:layout_constraintStart_toEndOf="@id/day_one_list"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/spacing_mxlarge">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/spacing_middle"
                app:cardElevation="@dimen/zero_dimen">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/day2"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/curved_card_purple"
                    android:alpha="0.6"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:includeFontPadding="false"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="@dimen/text_50"
                android:fontFamily="@font/alata_regular"
                android:layout_marginStart="@dimen/fab_margin"/>

            <TextView
                android:id="@+id/day_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:fontFamily="@font/alata_regular"
                android:text="@string/day"
                android:layout_marginBottom="50dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_heading"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="@dimen/card_dimen"
            android:id="@+id/day_three_list"
            android:layout_marginTop="@dimen/spacing_mxlarge"
            app:layout_constraintTop_toBottomOf="@id/day_one_list"
            app:layout_constraintStart_toStartOf="@id/day_one_list"
            app:layout_constraintEnd_toStartOf="@id/day_four_list">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/spacing_middle"
                app:cardElevation="@dimen/zero_dimen">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/day3"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/curved_card_green"
                    android:alpha="0.6"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:includeFontPadding="false"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="@dimen/text_50"
                android:fontFamily="@font/alata_regular"
                android:layout_marginStart="@dimen/fab_margin"/>

            <TextView
                android:id="@+id/day_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:fontFamily="@font/alata_regular"
                android:text="@string/day"
                android:layout_marginBottom="50dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_heading"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="@dimen/card_dimen"
            android:background="@drawable/curved_card_yellow"
            android:id="@+id/day_four_list"
            android:layout_marginTop="@dimen/spacing_mxlarge"
            app:layout_constraintTop_toBottomOf="@id/day_one_list"
            app:layout_constraintStart_toEndOf="@id/day_three_list"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/spacing_mxlarge">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/spacing_middle"
                app:cardElevation="@dimen/zero_dimen">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/day4"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/curved_card_yellow"
                    android:alpha="0.7"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:includeFontPadding="false"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="@dimen/text_50"
                android:fontFamily="@font/alata_regular"
                android:layout_marginStart="@dimen/fab_margin"/>

            <TextView
                android:id="@+id/day_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:fontFamily="@font/alata_regular"
                android:text="@string/day"
                android:layout_marginBottom="50dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_heading"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>